--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,11 @@
     "lint": "eslint \"src/**/*.js\""
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.609.0",
+    "@aws-sdk/client-s3": "^3.609.0",
+    "@aws-sdk/client-ssm": "^3.609.0",
+    "@aws-sdk/lib-dynamodb": "^3.609.0",
+    "@aws-sdk/s3-request-presigner": "^3.609.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
