--- a/client/.env.example
+++ b/client/.env.example
@@ -1,3 +1,2 @@
-VITE_API_URL=http://localhost:4000
-VITE_STREAMING_URL=http://localhost:4000/stream
-VITE_CHUNK_SIZE_MB=5
+VITE_API_URL=http://n11817143-videoapp.cab432.com/api
+VITE_AWS_REGION=ap-southeast-2
