--- a/server/.env.example
+++ b/server/.env.example
@@ -1,7 +1,8 @@
-PORT=4000
+PORT=8080
 JWT_SECRET=change_me
 TOKEN_EXPIRY=1h
 DB_FILE=./data.sqlite
 PUBLIC_DIR=./src/public
-CLIENT_ORIGIN=http://localhost:5173
+CLIENT_ORIGINS=http://n11817143-videoapp.cab432.com
 LIMIT_FILE_SIZE_MB=512
+AWS_REGION=ap-southeast-2
