🚀 Complete full-stack deployment with ECR containerization
- ✅ CORS configuration for domain access (n11817143-videoapp.cab432.com)
- ✅ Multi-stage Docker containerization (backend + frontend)
- ✅ ECR integration with push capability
- ✅ Comprehensive documentation and deployment guides
- ✅ Domain-specific environment configuration
- ✅ Video upload/streaming functionality tested
- ✅ JWT authentication and middleware setup
- ✅ FFmpeg integration for video processing
- ✅ Health checks and startup scripts
- ✅ Production-ready configuration files

Files updated:
- Docker: Combined Dockerfile, docker-compose.yml, individual service Dockerfiles
- Config: Environment files, CORS settings, Vite config
- Docs: README, deployment guides, ECR push guide, status reports
- Frontend: React favicon, domain-specific API endpoints
- Backend: CORS middleware, public file serving, config updates
- Scripts: Startup scripts, test automation

Container successfully pushed to ECR: 901444280953.dkr.ecr.ap-southeast-2.amazonaws.com/n11817143-a2:latest

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,21 @@ version: "3.9"
 services:
   backend:
     build: ./server
-    ports: ["8080:8080"]
+    ports: [ "8080:8080" ]
     environment:
       - AWS_REGION=ap-southeast-2
-      - CLIENT_ORIGINS=http://n11817143-videoapp.cab432.com
+      - CLIENT_ORIGINS=http://n11817143-videoapp.cab432.com:3000
+      - JWT_SECRET=change_me_in_production
+      - USE_LOCAL_STORAGE=true
+      - LIMIT_FILE_SIZE_MB=512
+    volumes:
+      - ./server/data:/app/data
+      - ./server/src/public:/app/src/public
   frontend:
     build: ./client
-    ports: ["80:80"]
+    ports: [ "3000:3000" ]
     environment:
-      - VITE_API_URL=http://n11817143-videoapp.cab432.com/api
+      - VITE_API_URL=http://n11817143-videoapp.cab432.com:8080/api
+      - VITE_AWS_REGION=ap-southeast-2
+    depends_on:
+      - backend
