--- a/server/.env.example
+++ b/server/.env.example
@@ -1,8 +1,22 @@
+# Server Configuration
 PORT=8080
-JWT_SECRET=change_me
+JWT_SECRET=change_me_in_production
 TOKEN_EXPIRY=1h
+
+# Database
 DB_FILE=./data.sqlite
+
+# File Storage
 PUBLIC_DIR=./src/public
-CLIENT_ORIGINS=http://n11817143-videoapp.cab432.com
+USE_LOCAL_STORAGE=true
 LIMIT_FILE_SIZE_MB=512
+
+# CORS Configuration (include port for development)
+CLIENT_ORIGINS=http://n11817143-videoapp.cab432.com:3000
+
+# AWS Configuration
 AWS_REGION=ap-southeast-2
+
+# Domain Configuration
+# Frontend URL: http://n11817143-videoapp.cab432.com:3000
+# Backend URL: http://n11817143-videoapp.cab432.com:8080
