🔐 AWS Secrets Manager Integration & Docker Deployment
✅ MAJOR FEATURES ADDED:
- AWS Secrets Manager integration for JWT secrets
- Complete Docker containerization with multi-stage build
- Domain-based configuration (n11817143-videoapp.cab432.com)
- Comprehensive security documentation

🔧 TECHNICAL CHANGES:
- Added @aws-sdk/client-secrets-manager dependency
- Created server/src/utils/secrets.js for AWS integration
- Updated server/src/config.js with async secret loading
- Modified server/src/index.js for startup sequence
- Removed all localhost dependencies
- Updated Docker health checks to use domain

📚 DOCUMENTATION:
- AWS-SECRETS-MANAGER-INTEGRATION.md (comprehensive guide)
- Updated ECR-PUSH-GUIDE.md with domain endpoints
- Environment configuration examples

🐳 DOCKER IMPROVEMENTS:
- Multi-stage Dockerfile optimization
- AWS region environment variables
- Health checks with proper endpoints
- Container successfully tested and running

🎯 SECURITY ENHANCEMENTS:
- JWT secrets loaded from AWS Secrets Manager (n11817143-a2-secret)
- No hardcoded secrets in source code
- Fallback mechanism for development
- IAM role-based access control

✅ TESTED & VERIFIED:
- Container running successfully with both services
- JWT authentication working with retrieved secrets
- Health endpoints responding correctly
- Frontend accessible at domain:3000
- Backend API functional at domain:8080

Status: Production ready with AWS Secrets Manager integration ✨

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,7 +1,10 @@
 # Server Configuration
 PORT=8080
-JWT_SECRET=change_me_in_production
+JWT_SECRET=fallback_secret_if_secrets_manager_fails
 TOKEN_EXPIRY=1h
+
+# AWS Secrets Manager
+AWS_SECRETS_MANAGER_SECRET_NAME=n11817143-a2-secret
 
 # Database
 DB_FILE=./data.sqlite
