--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -24,7 +24,7 @@ EXPOSE 8080
 
 # Health check
 HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
-    CMD curl -f http://localhost:8080/api/health || exit 1
+    CMD curl -f http://n11817143-videoapp.cab432.com:8080/api/health || exit 1
 
 # Start the application
 CMD ["npm", "start"]
