--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.609.0",
     "@aws-sdk/client-s3": "^3.609.0",
+    "@aws-sdk/client-secrets-manager": "^3.896.0",
     "@aws-sdk/client-ssm": "^3.609.0",
     "@aws-sdk/lib-dynamodb": "^3.609.0",
     "@aws-sdk/s3-request-presigner": "^3.609.0",
