--- a/server/.env.example
+++ b/server/.env.example
@@ -11,8 +11,11 @@ DB_FILE=./data.sqlite
 
 # File Storage
 PUBLIC_DIR=./src/public
-USE_LOCAL_STORAGE=true
+USE_LOCAL_STORAGE=false
 LIMIT_FILE_SIZE_MB=512
+
+# DynamoDB Configuration
+USE_DYNAMO=true
 
 # CORS Configuration (include port for development)
 CLIENT_ORIGINS=http://n11817143-videoapp.cab432.com:3000
