feat: Implement AWS Parameter Store integration
- Add centralized Parameter Store utility with caching and batch loading
- Support for all required parameters under /n11817143/app/ prefix
- Integrate with existing S3 and DynamoDB configurations
- Add comprehensive CLI management tools (list, validate, test, status)
- Implement graceful fallback to environment variables
- Add comprehensive documentation and troubleshooting guide
- Include integration tests and validation scripts
- Update server startup to use Parameter Store configuration

Parameters configured:
- cognitoClientId, cognitoUserPoolId, domainName
- dynamoTable, dynamoOwnerIndex, s3Bucket
- maxUploadSizeMb (512), preSignedUrlTTL (600)
- S3 prefixes for raw, thumbnails, and transcoded content

New files:
- src/utils/parameterStore.js - Main Parameter Store utility
- parameter-cli.js - CLI management tool
- parameter-store-status.js - Status overview
- test-parameter-store.js - Integration tests
- docs/PARAMETER-STORE-INTEGRATION.md - Complete documentation

Updated npm scripts:
- params:list, params:validate, params:test, params:status

--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,12 @@
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
     "init-db": "node src/db.js --init",
-    "lint": "eslint \"src/**/*.js\""
+    "lint": "eslint \"src/**/*.js\"",
+    "params:list": "node parameter-cli.js list",
+    "params:validate": "node parameter-cli.js validate",
+    "params:test": "node test-parameter-store.js",
+    "params:status": "node parameter-store-status.js",
+    "params:clear-cache": "node parameter-cli.js clear-cache"
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.609.0",
