feat: Implement hybrid Cognito authentication system
✨ Features:
- User registration via AWS Cognito with email verification
- Email confirmation flow with verification codes
- Hybrid login: Cognito registration + internal JWT authentication
- Password storage and verification system
- User store for verified Cognito users

🔧 Implementation:
- CognitoService for registration and confirmation (no IAM issues)
- Internal authentication system for login (avoids AdminInitiateAuth permission)
- UserStore and PasswordStore for hybrid data management
- Updated frontend with Cognito configuration and flows
- Enhanced Login component with email confirmation support

🚀 Benefits:
- Resolves IAM permission limitations
- Professional email verification via Cognito
- Maintains existing JWT authentication architecture
- Full application functionality preserved
- Clean separation of concerns

📦 Dependencies:
- Added @aws-sdk/client-cognito-identity-provider
- Added aws-amplify for frontend Cognito integration
- Updated auth controllers and middleware
- Enhanced API endpoints for confirmation flow

🧪 Testing:
- Includes test user creation script
- Full registration -> confirmation -> login flow tested
- All existing features (video upload, streaming, etc.) working

This hybrid approach successfully moves user registration to Cognito while
maintaining compatibility with existing IAM permissions and architecture.

--- a/server/.env.example
+++ b/server/.env.example
@@ -6,10 +6,7 @@ TOKEN_EXPIRY=1h
 # AWS Secrets Manager
 AWS_SECRETS_MANAGER_SECRET_NAME=n11817143-a2-secret
 
-# Database
-DB_FILE=./data.sqlite
-
-# File Storage
+# File Storage (local files only used for temporary processing)
 PUBLIC_DIR=./src/public
 USE_LOCAL_STORAGE=false
 LIMIT_FILE_SIZE_MB=512
