--- a/client/package.json
+++ b/client/package.json
@@ -10,12 +10,13 @@
     "lint": "eslint \"src/**/*.{js,jsx}\""
   },
   "dependencies": {
+    "aws-amplify": "^6.15.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.2.1",
     "@eslint/js": "^9.7.0",
+    "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^9.7.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
