--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
-    "init-db": "node src/db.js --init",
     "lint": "eslint \"src/**/*.js\"",
     "params:list": "node parameter-cli.js list",
     "params:validate": "node parameter-cli.js validate",
@@ -15,6 +14,7 @@
     "params:clear-cache": "node parameter-cli.js clear-cache"
   },
   "dependencies": {
+    "@aws-sdk/client-cognito-identity-provider": "^3.896.0",
     "@aws-sdk/client-dynamodb": "^3.609.0",
     "@aws-sdk/client-s3": "^3.609.0",
     "@aws-sdk/client-secrets-manager": "^3.896.0",
@@ -30,8 +30,6 @@
     "mime-types": "^2.1.35",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "sqlite": "^5.1.1",
-    "sqlite3": "^5.1.7",
     "zod": "^3.23.8"
   },
   "devDependencies": {
