--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,26 +1,12 @@
-# Development Dockerfile for Vite
-FROM node:22-slim
-
+FROM node:22-slim AS build
 WORKDIR /app
-
-# Copy package files
 COPY package*.json ./
-
-# Install dependencies
 RUN npm ci
-
-# Copy application code
 COPY . .
+RUN npm run build
 
-# Expose Vite dev server port
-EXPOSE 3000
-
-# Start Vite development server
-CMD ["npm", "run", "dev", "--", "--host", "0.0.0.0", "--port", "3000"]
-
-# Production build stage (commented out for development)
-# FROM nginx:alpine as production
-# COPY --from=build /app/dist /usr/share/nginx/html
-# COPY nginx.conf /etc/nginx/nginx.conf
-# EXPOSE 80
-# CMD ["nginx", "-g", "daemon off;"]
+FROM nginx:1.27-alpine
+COPY --from=build /app/dist /usr/share/nginx/html
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
