--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,19 +5,18 @@ services:
     ports: [ "8080:8080" ]
     environment:
       - AWS_REGION=ap-southeast-2
-      - CLIENT_ORIGINS=https://n11817143-videoapp.cab432.com,http://n11817143-videoapp.cab432.com:3000
-      - JWT_SECRET=change_me_in_production
-      - USE_DYNAMO=true
-      - USE_LOCAL_STORAGE=false
-      - LIMIT_FILE_SIZE_MB=512
-    volumes:
-      - ./server/data:/app/data
-      - ./server/src/public:/app/src/public
+      - CLIENT_ORIGINS=http://localhost:3000,https://n11817143-videoapp.cab432.com
+      - COGNITO_USER_POOL_ID=ap-southeast-2_CdVnmKfrW
+      - DOMAIN_NAME=n11817143-videoapp.cab432.com
+      - PARAMETER_PREFIX=/n11817143/app/
+      - S3_BUCKET=n11817143-a2
+      - DYNAMO_TABLE=n11817143-VideoApp
+      - ELASTICACHE_ENDPOINT=n11817143-a2-cache.cfg.apse2.cache.amazonaws.com:11211
   frontend:
     build: ./client
-    ports: [ "3000:3000" ]
+    ports: [ "3000:80" ]
     environment:
-      - VITE_API_URL=https://n11817143-videoapp.cab432.com/api
+      - VITE_API_URL=http://localhost:8080/api
       - VITE_AWS_REGION=ap-southeast-2
     depends_on:
       - backend
