--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,30 +1,7 @@
 FROM node:22-slim
-
-# Install FFmpeg and other system dependencies
-RUN apt-get update && apt-get install -y \
-    ffmpeg \
-    && rm -rf /var/lib/apt/lists/*
-
 WORKDIR /app
-
-# Copy package files
 COPY package*.json ./
-
-# Install dependencies
-RUN npm ci --only=production
-
-# Copy application code
+RUN npm ci --omit=dev
 COPY . .
-
-# Create directories for uploads
-RUN mkdir -p src/public/videos src/public/thumbs
-
-# Expose port
 EXPOSE 8080
-
-# Health check
-HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
-    CMD curl -f http://n11817143-videoapp.cab432.com:8080/api/health || exit 1
-
-# Start the application
 CMD ["npm", "start"]
