--- a/server/package.json
+++ b/server/package.json
@@ -21,15 +21,13 @@
     "@aws-sdk/client-ssm": "^3.609.0",
     "@aws-sdk/lib-dynamodb": "^3.609.0",
     "@aws-sdk/s3-request-presigner": "^3.609.0",
-    "bcrypt": "^5.1.1",
+    "aws-jwt-verify": "^4.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "fluent-ffmpeg": "^2.1.2",
-    "jsonwebtoken": "^9.0.2",
+    "memjs": "^1.3.1",
     "mime-types": "^2.1.35",
     "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
